Fixed an issue that was causing item names to be cut off

--- a/css/main.css
+++ b/css/main.css
@@ -122,6 +122,7 @@ header {
 	text-align: left;
 	white-space: nowrap;
 	overflow: hidden;
+	line-height: 2em;
 	text-overflow: ellipsis;
 }
 
